--- a/team-page/package.json
+++ b/team-page/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-responsive-carousel": "^3.1.41",
     "react-scripts": "1.1.4"
   },
   "scripts": {
